# ciel-volume-renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CielCompileOpts.cmake  CielConfig.cmake  CielFindDeps.cmake
src/: CMakeLists.txt  camera.h  cielApp.cpp  cielApp.h  main.cpp  renderSetting.h  renderer.cpp  renderer.h  scene.cpp  scene.h
src/math/: CMakeLists.txt  color.h  linearAlgebra.cpp  linearAlgebra.h  matrix.cpp  matrix.h  vector.h
src/volume/: CMakeLists.txt  volume.cpp  volumeBase.h  volumeScalarBox.h  volumeScalarCSG.h  volumeScalarEllipse.h  volumeScalarSphere.h  volumeScalarTorus.h
